--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+    
     <title>API- Multiverso do renato</title>
 </head>
+
+<style>
+    *{
+    margin: 0;
+    padding: 0;
+}
+
+body {
+	background-color: #E9D8F2;
+}
+
+nav{
+    background-image: url('../../public/imagens/logo.png');
+    background-repeat: no-repeat;
+    background-size: 9%;
+    margin-top: 0px;
+    background-color: #8858C7;
+    height: 150px;
+    background-position: 3% 35%;
+    /*margin-bottom: 10px;
+    box-shadow: 10px 5px 5px pink;*/
+  }
+  
+  
+  nav ul{
+   display: flex;
+   padding-left: 250px;
+   padding-top: 50px;
+  
+  }
+  
+  nav ul li{
+    display: flex;
+    flex-wrap: wrap;
+    margin:5px 55px 15px 0px;
+  }
+  
+  nav ul li a{
+  color: black;
+  font-weight: bold;
+  font-family: Georgia, serif;
+  font-size: 18px;
+  }
+  
+  nav ul li a:hover{
+    background-image: linear-gradient(to bottom, #9C90DC, #DCD2F0, #9AACDD);
+  
+  
+  background-clip: text;
+  -webkit-background-clip: text; 
+  
+  
+  -webkit-text-fill-color: transparent;
+  
+  
+  color: black;
+  }
+</style>
 
 <body>
 
