--- a/views/index.html
+++ b/views/index.html
@@ -114,6 +114,11 @@ nav{
     margin: 50px 0px 0px 0px;
 }
 
+.card p{
+    text-align: justify;
+    margin: 0px 20px 0px 20px;
+}
+
 </style>
 
 <body>
