--- a/views/index.html
+++ b/views/index.html
@@ -76,7 +76,7 @@ nav{
     text-align: center;
     width: 70%;
     border-radius: 5px;
-    box-shadow: 0 5px 70px -12px rgb(0 0 0 / 0.25);
+    box-shadow: 0px 5px 70px -12px #9C90DC;
 }
 
 .card h1{
