--- a/views/index.html
+++ b/views/index.html
@@ -179,7 +179,7 @@ footer{
     <h1>Funcionalidades:</h1>
     
 
-    <div id="cadastrar"><h3>Cadastro de usuários</h3> 
+    <div id="cadastrar"><h3>Cadastrar usuários</h3> 
         <p>O cadastro de novos usuários no banco de dados através do verbo "create" vindo do sequelize que foi instalado
             e usado ao longo do desenvolvimento. Isso ocorre de modo que ao acessar uma rota "post", informando os dados do usuário é feito seu cadastro no banco, 
             como informado no arquivo "routes", com isso, a função "create users" é executada, e os dados serão salvos no banco de dados com um id identificador.
